admission/ValidatingAdmissionPolicy/policies/sysctls/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sysctls-pod
  annotations:
    kubeapt.io/uuid: "ef3af6c4-dc03-46bd-9f3c-7f9ac329edf2"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    sysctls:
    - name: net.ipv4.ip_forward
      value: '1'
